Events no longer squish if there are many of them.

--- a/game-client/src/styles/sass/state.sass
+++ b/game-client/src/styles/sass/state.sass
@@ -84,6 +84,7 @@
         background-color: #d4d4d4
         overflow-y: auto
         .event
+            flex-shrink: 0
             display: flex
             justify-content: center
             margin: 3px
